<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>social_force_window_planner</name>
  <version>0.4.7</version>
  <description>social_force_window_planner</description>
  <author email="noeperez@upo.es">Noé Pérez</author>
  <author email="rotegal@alu.upo.es">Roberto Otero</author>
  <maintainer email="noeperez@upo.es">Noé Pérez</maintainer>
  <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav2_common</depend>
    <depend>nav2_core</depend>
    <depend>nav2_util</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>nav2_msgs</depend>
    <depend>people_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>angles</depend>
    <depend>eigen</depend>
    <depend>pluginlib</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <depend>lightsfm</depend>

    <!-- <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_lint_auto</test_depend> -->
    
    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/sfw_plugin.xml" />
    </export>
</package>
